--- a/resources/scss/Ceres.scss
+++ b/resources/scss/Ceres.scss
@@ -86,3 +86,6 @@
 @import "ceres/views/ItemList/loading-animation";
 @import "ceres/views/StaticPages/static-pages";
 @import "ceres/views/MyAccount/my-account";
+
+// Widgets
+@import "ceres/widgets/widgets";
