--- a/resources/views/Widgets/Grid/ThreeColumnWidget.twig
+++ b/resources/views/Widgets/Grid/ThreeColumnWidget.twig
@@ -1,45 +1,39 @@
 {% set layout = widget.settings.layout.mobile %}
 
-<div class="row">
-    {% if layout == "oneToOneToOne" %}
-        {# 3 Spalten identisch: #}
-        <div class="col-xs-12 col-md-4" data-builder-child-container="first">{{ children.first | raw }}</div>
-        <div class="col-xs-12 col-md-4" data-builder-child-container="second">{{ children.second | raw }}</div>
-        <div class="col-xs-12 col-md-4" data-builder-child-container="third">{{ children.third | raw }}</div>
-    {% elseif layout == "twoToOneToOne" %}
-        {# 3 Spalten links groß: #}
-        <div class="col-xs-12 col-md-6" data-builder-child-container="first">{{ children.first | raw }}</div>
-        <div class="col-xs-12 col-md-3" data-builder-child-container="second">{{ children.second | raw }}</div>
-        <div class="col-xs-12 col-md-3" data-builder-child-container="third">{{ children.third | raw }}</div>
-    {% elseif layout == "oneToTwoToOne" %}
-        {# 3 Spalten mitte groß: #}
-        <div class="col-xs-12 col-md-3" data-builder-child-container="first">{{ children.first | raw }}</div>
-        <div class="col-xs-12 col-md-6" data-builder-child-container="second">{{ children.second | raw }}</div>
-        <div class="col-xs-12 col-md-3" data-builder-child-container="third">{{ children.third | raw }}</div>
-    {% elseif layout == "oneToOneToTwo" %}
-        {# 3 Spalten rechts groß: #}
-        <div class="col-xs-12 col-md-3" data-builder-child-container="first">{{ children.first | raw }}</div>
-        <div class="col-xs-12 col-md-3" data-builder-child-container="second">{{ children.second | raw }}</div>
-        <div class="col-xs-12 col-md-6" data-builder-child-container="third">{{ children.third | raw }}</div>
+{% set gridClass = "widget-grid-1-1-1" %}
+{% if layout == "twoToOneToOne" %}
+    {% set gridClass = "widget-grid-2-1-1" %}
+{% elseif layout == "oneToTwoToOne"%}
+    {% set gridClass = "widget-grid-1-2-1" %}
+{% elseif layout == "oneToOneToTwo" %}
+    {% set gridClass = "widget-grid-1-1-2" %}
+{% elseif layout == "twoToOneStacked" or layout == "oneStackedToTwo"%}
+    {% set gridClass = "widget-grid-stacked" %}
+{% endif %}
+
+
+<div class="widget widget-grid {{ gridClass }}">
+    {% if layout == "oneStackedToTwo" %}
+
+        <div class="widget-inner widget-inner-stacked">
+            <div class="widget-inner" data-builder-child-container="first">{{ children.first | raw }}</div>
+            <div class="widget-inner" data-builder-child-container="second">{{ children.second | raw }}</div>
+        </div>
+        <div class="widget-inner" data-builder-child-container="third">{{ children.third | raw }}</div>
+
     {% elseif layout == "twoToOneStacked" %}
-        {# 3 Spalten, links eine, rechts 2: #}
-        <div class="col-xs-12 col-md-8" data-builder-child-container="first">{{ children.first | raw }}</div>
 
-        <div class="col-xs-12 col-md-4">
-            <div class="row">
-                <div class="col-xs-12" data-builder-child-container="second">{{ children.second | raw }}</div>
-                <div class="col-xs-12" data-builder-child-container="third">{{ children.third | raw }}</div>
-            </div>
-        </div>
-    {% elseif layout == "oneStackedToTwo" %}
-        {# 3 Spalten, links 2, rechts eine: #}
-        <div class="col-xs-12 col-md-4">
-            <div class="row">
-                <div class="col-xs-12" data-builder-child-container="first">{{ children.first | raw }}</div>
-                <div class="col-xs-12" data-builder-child-container="second">{{ children.second | raw }}</div>
-            </div>
+        <div class="widget-inner" data-builder-child-container="first">{{ children.first | raw }}</div>
+        <div class="widget-inner widget-inner-stacked">
+            <div class="widget-inner" data-builder-child-container="second">{{ children.second | raw }}</div>
+            <div class="widget-inner" data-builder-child-container="third">{{ children.third | raw }}</div>
         </div>
 
-        <div class="col-xs-12 col-md-8" data-builder-child-container="third">{{ children.third | raw }}</div>
+    {% else %}
+
+        <div class="widget-inner" data-builder-child-container="first">{{ children.first | raw }}</div>
+        <div class="widget-inner" data-builder-child-container="second">{{ children.second | raw }}</div>
+        <div class="widget-inner" data-builder-child-container="third">{{ children.third | raw }}</div>
+
     {% endif %}
 </div>
