--- a/resources/css/ceres.css
+++ b/resources/css/ceres.css
@@ -19730,4 +19730,332 @@ body.menu-is-visible {
   width: 100% !important;
 }
 
+.widget {
+  margin-bottom: 2rem;
+}
+
+.widget .widget-inner {
+  position: relative;
+}
+
+.widget .widget-inner .widget {
+  margin-bottom: 0;
+}
+
+@media (max-width: 767px) {
+  .widget {
+    margin-bottom: 1rem;
+  }
+  .widget .widget-inner .widget {
+    margin-bottom: 1rem;
+  }
+}
+
+.widget-grid {
+  margin-left: -15px;
+  margin-right: -15px;
+}
+
+@media (min-width: 768px) {
+  .widget-grid {
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
+.widget-grid .widget-inner {
+  padding-left: 15px;
+  padding-right: 15px;
+  -ms-flex: 1;
+      flex: 1;
+}
+
+.widget-grid .widget-inner-stacked {
+  margin-left: -15px;
+  margin-right: -15px;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-direction: column;
+      flex-direction: column;
+}
+
+.widget-grid .widget-inner-stacked > .widget-inner:first-child {
+  padding-bottom: 2rem;
+}
+
+.widget-grid.widget-grid-1-2 .widget-inner:last-child,
+.widget-grid.widget-grid-2-1 .widget-inner:first-child,
+.widget-grid.widget-grid-1-1-2 .widget-inner:last-child,
+.widget-grid.widget-grid-1-2-1 .widget-inner:nth-child(2),
+.widget-grid.widget-grid-2-1-1 .widget-inner:first-child,
+.widget-grid.widget-grid-stacked .widget-inner:not(.widget-inner-stacked) {
+  -ms-flex: 2;
+      flex: 2;
+}
+
+.widget-image-box {
+  position: relative;
+  padding-bottom: 33%;
+  overflow: hidden;
+}
+
+.widget-image-box > img {
+  position: absolute;
+  max-width: 100%;
+  max-height: 100%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.widget-image-box > img.img-cover {
+  min-width: 100%;
+  min-height: 100%;
+  object-fit: cover;
+}
+
+.widget-image-box > .widget-inner {
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  padding: 1.5rem;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.widget-image-box > .widget-inner .widget-caption {
+  transition: 300ms all ease;
+}
+
+.widget-image-box > .widget-inner .widget-caption h2, .widget-image-box > .widget-inner .widget-caption .h2 {
+  margin: 0;
+  font-size: 1.75rem;
+}
+
+.widget-image-box.widget-image-box-fullwidth > .widget-inner .widget-caption {
+  width: 100%;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-align: center;
+      align-items: center;
+}
+
+.widget-image-box.widget-image-box-fullwidth > .widget-inner .widget-caption h2, .widget-image-box.widget-image-box-fullwidth > .widget-inner .widget-caption .h2 {
+  text-align: center;
+  width: 100%;
+}
+
+@media (min-width: 768px) {
+  .widget-image-box.widget-image-box-fullwidth > .widget-inner .widget-caption h2, .widget-image-box.widget-image-box-fullwidth > .widget-inner .widget-caption .h2 {
+    font-size: 4rem;
+  }
+}
+
+.widget-image-box.widget-image-box-inline-caption > .widget-inner {
+  -ms-flex-align: end;
+      align-items: flex-end;
+}
+
+.widget-image-box.widget-image-box-inline-caption > .widget-inner .widget-caption {
+  padding: 1.5rem;
+}
+
+.widget-image-box.widget-image-box-block-caption > .widget-inner .widget-caption {
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  padding: 1rem;
+}
+
+.widget-image-box.widget-image-box-no-caption > .widget-inner .widget-caption {
+  display: none;
+}
+
+.widget-image-box.widget-primary .widget-caption {
+  color: #fff;
+  background-color: rgba(0, 142, 189, 0.8);
+}
+
+.widget-image-box.widget-primary a.widget-inner:hover .widget-caption {
+  color: #fff;
+  background-color: rgba(0, 142, 189, 0.9);
+}
+
+.widget-image-box.widget-secondary .widget-caption {
+  color: #fff;
+  background-color: rgba(212, 2, 29, 0.8);
+}
+
+.widget-image-box.widget-secondary a.widget-inner:hover .widget-caption {
+  color: #fff;
+  background-color: rgba(212, 2, 29, 0.9);
+}
+
+.widget-image-box.widget-info .widget-caption {
+  color: #fff;
+  background-color: rgba(91, 192, 222, 0.8);
+}
+
+.widget-image-box.widget-info a.widget-inner:hover .widget-caption {
+  color: #fff;
+  background-color: rgba(91, 192, 222, 0.9);
+}
+
+.widget-image-box.widget-warning .widget-caption {
+  color: #fff;
+  background-color: rgba(240, 173, 78, 0.8);
+}
+
+.widget-image-box.widget-warning a.widget-inner:hover .widget-caption {
+  color: #fff;
+  background-color: rgba(240, 173, 78, 0.9);
+}
+
+.widget-image-box.widget-danger .widget-caption {
+  color: #fff;
+  background-color: rgba(217, 83, 79, 0.8);
+}
+
+.widget-image-box.widget-danger a.widget-inner:hover .widget-caption {
+  color: #fff;
+  background-color: rgba(217, 83, 79, 0.9);
+}
+
+.widget-image-box.widget-inverse .widget-caption {
+  color: #fff;
+  background-color: rgba(77, 79, 77, 0.8);
+}
+
+.widget-image-box.widget-inverse a.widget-inner:hover .widget-caption {
+  color: #fff;
+  background-color: rgba(77, 79, 77, 0.9);
+}
+
+@media (min-width: 768px) {
+  .widget-grid-1-2 > .widget-inner:first-child .widget-image-box,
+  .widget-grid-2-1 > .widget-inner:last-child .widget-image-box,
+  .widget-grid-2-1-1 > .widget-inner .widget-image-box,
+  .widget-grid-1-2-1 > .widget-inner .widget-image-box,
+  .widget-grid-1-1-2 > .widget-inner .widget-image-box {
+    padding-bottom: 100%;
+  }
+  .widget-grid-1-1-1 > .widget-inner .widget-image-box {
+    padding-bottom: 66.6666%;
+  }
+  .widget-grid-1-2 > .widget-inner:last-child .widget-image-box,
+  .widget-grid-2-1 > .widget-inner:first-child .widget-image-box,
+  .widget-grid-2-1-1 > .widget-inner:first-child .widget-image-box,
+  .widget-grid-1-2-1 > .widget-inner:nth-child(2) .widget-image-box,
+  .widget-grid-1-1-2 > .widget-inner:last-child .widget-image-box {
+    padding-bottom: 50%;
+  }
+  .widget-grid-stacked .widget-inner .widget-image-box {
+    padding-bottom: 66%;
+  }
+  .widget-grid-stacked .widget-inner-stacked .widget-image-box {
+    padding-bottom: 0;
+    height: 100%;
+  }
+}
+
+.widget-item-list .widget-caption {
+  padding: 1rem 1.5rem;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-align: center;
+      align-items: center;
+}
+
+.widget-item-list .widget-caption h2, .widget-item-list .widget-caption .h2 {
+  -ms-flex: 1;
+      flex: 1;
+  padding-top: .2rem;
+  margin: 0;
+  text-transform: uppercase;
+  font-size: 1.75rem;
+}
+
+.widget-item-list .widget-caption a {
+  color: #fff;
+}
+
+.widget-item-list.widget-inner > .row {
+  width: 100%;
+}
+
+.widget-item-list.widget-primary .widget-caption {
+  color: #fff;
+  background-color: #008ebd;
+}
+
+.widget-item-list.widget-secondary .widget-caption {
+  color: #fff;
+  background-color: #d4021d;
+}
+
+.widget-item-list.widget-info .widget-caption {
+  color: #fff;
+  background-color: #5bc0de;
+}
+
+.widget-item-list.widget-warning .widget-caption {
+  color: #fff;
+  background-color: #f0ad4e;
+}
+
+.widget-item-list.widget-danger .widget-caption {
+  color: #fff;
+  background-color: #d9534f;
+}
+
+.widget-item-list.widget-inverse .widget-caption {
+  color: #fff;
+  background-color: #4D4F4D;
+}
+
+.widget-title-bar .widget-inner {
+  padding: 1rem 1.5rem;
+  text-align: center;
+}
+
+.widget-title-bar .h1, .widget-title-bar h1 {
+  margin: 0.5rem auto;
+  font-size: 2.5rem;
+  letter-spacing: 1.25px;
+  display: block;
+}
+
+.widget-title-bar.widget-primary {
+  color: #fff;
+  background-color: #008ebd;
+}
+
+.widget-title-bar.widget-secondary {
+  color: #fff;
+  background-color: #d4021d;
+}
+
+.widget-title-bar.widget-info {
+  color: #fff;
+  background-color: #5bc0de;
+}
+
+.widget-title-bar.widget-warning {
+  color: #fff;
+  background-color: #f0ad4e;
+}
+
+.widget-title-bar.widget-danger {
+  color: #fff;
+  background-color: #d9534f;
+}
+
+.widget-title-bar.widget-inverse {
+  color: #fff;
+  background-color: #4D4F4D;
+}
+
 /*# sourceMappingURL=ceres.css.map */
