--- a/resources/views/Widgets/Common/ItemListWidget.twig
+++ b/resources/views/Widgets/Common/ItemListWidget.twig
@@ -13,17 +13,23 @@
 {% endif %}
 
 {{ Twig.set("itemList", Twig.call("services.itemList.getItemList", [listType, itemListId, itemSort, maxItems]) ) }}
-<div class="row">
-    <div class="col-xs-12">
-        <div class="section-header m-b-1">
+
+<div class="widget widget-item-list widget-primary">
+    <div class="widget-inner">
+        <div class="widget-caption m-b-1">
+            <h2>Wohnzimmer</h2>
+            <a href="#">
+                <i class="fa fa-angle-double-right" aria-hidden="true"></i>
+                Alle ansehen
+            </a>
             {% if listType == "category" %}
                 {{ Twig.if("category") }}
-                    <h2>{{ Twig.print("category.details[0].name") }}</h2>
-                    <a href="{{ Twig.print(Twig.call("services.category.getURL", [Twig.var("category")])) }}" class="section-link-all">
-                        <i class="fa fa-angle-double-right" aria-hidden="true"></i> {{ Twig.trans("Ceres::Template.homepageShowAll") }}
-                    </a>
+                <h2>{{ Twig.print("category.details[0].name") }}</h2>
+                <a href="{{ Twig.print(Twig.call("services.category.getURL", [Twig.var("category")])) }}">
+                    <i class="fa fa-angle-double-right" aria-hidden="true"></i> {{ Twig.trans("Ceres::Template.homepageShowAll") }}
+                </a>
                 {{ Twig.else() }}
-                    <h2>{{ Twig.trans("Ceres::Widget.itemListPlaceholderListHeader") }}</h2>
+                <h2>{{ Twig.trans("Ceres::Widget.itemListPlaceholderListHeader") }}</h2>
                 {{ Twig.endif() }}
             {% elseif listType == "last_seen" %}
                 <h2>{{ Twig.trans("Ceres::Template.itemListLastSeen") }}</h2>
@@ -31,8 +37,11 @@
                 <h2>{{ Twig.print(Twig.call("services.tag.getTagName", [itemListId])) }}</h2>
             {% endif %}
         </div>
+
+        <div class="row clearfix">
+            {{ Twig.if("itemList is not empty") }}
+                <container-item-list :items="{{ Twig.print("itemList[0].documents | json_encode") }}"></container-item-list>
+            {{ Twig.endif() }}
+        </div>
     </div>
-    {{ Twig.if("itemList is not empty") }}
-        <container-item-list :items="{{ Twig.print("itemList[0].documents | json_encode") }}"></container-item-list>
-    {{ Twig.endif() }}
 </div>
