--- a/resources/views/Widgets/Common/TitleBarWidget.twig
+++ b/resources/views/Widgets/Common/TitleBarWidget.twig
@@ -2,14 +2,12 @@
 
 {% set text = widget.settings.text.mobile %}
 
-<div class="row">
-    <div class="col-xs-12">
-        <div class="homepage-title m-b-1">
-            {% if text | trim is not empty %}
-                <h1>{{ text }}</h1>
-            {% else %}
-                <h1>{{ Twig.print('config("Ceres.header.company_name")') }}</h1>
-            {% endif %}
-        </div>
+<div class="widget widget-title-bar widget-primary">
+    <div class="widget-inner">
+        {% if text | trim is not empty %}
+            <h1>{{ text }}</h1>
+        {% else %}
+            <h1>{{ Twig.print('config("Ceres.header.company_name")') }}</h1>
+        {% endif %}
     </div>
 </div>
