FIX side navigation and breadcrumbs on non mobile touch devices

--- a/resources/views/Category/Macros/CategoryTree.twig
+++ b/resources/views/Category/Macros/CategoryTree.twig
@@ -68,7 +68,7 @@
             {% else %}
 
                 <li>
-                    <a href="{{ currentScopeUrl }}" v-render-category="{ id: {{ category.id }}, type: '{{ category.type }}', hasNoChilds: true }">{{ category.details[0].name }}</a>
+                    <a href="{{ currentScopeUrl }}" v-render-category="{ id: {{ category.id }}, type: '{{ category.type }}', alwaysOpen: true }">{{ category.details[0].name }}</a>
                 </li>
 
             {% endif %}
@@ -83,7 +83,6 @@
 
     {% set urlNow = currentScopeUrl %}
 
-
     {% for category in categories %}
 
         {% set urlNow = currentScopeUrl ~ "/" ~ category.details[0].nameUrl %}
@@ -91,7 +90,7 @@
         {% if category.details[0] %}
             <ul>
                 <li class="nav-item{% for breadcrumb in breadcrumbs %}{% if category.id == breadcrumb.id %} active{% endif %}{% endfor %}" v-update-sidenav-selection="$store.getters.breadcrumbs" data-category-id="{{ category.id }}">
-                    <a href="{{ urlNow }}" class="nav-link" v-render-category="{ id: {{ category.id }}, type: '{{ category.type }}' }">{{ category.details[0].name }}</a>
+                    <a href="{{ urlNow }}" class="nav-link" v-render-category="{ id: {{ category.id }}, type: '{{ category.type }}', alwaysOpen: true }">{{ category.details[0].name }}</a>
                     {% if category.children is not empty %}
                         {{ sidemenu.get_sidemenu(breadcrumbs, category.children, urlNow) }}
                     {% endif %}
