Improve styling of image carousel widget

--- a/resources/scss/ceres/widgets/_widgets.scss
+++ b/resources/scss/ceres/widgets/_widgets.scss
@@ -3,5 +3,6 @@
 @import "Helper/base-widget";
 @import "Grid/grid-widget";
 @import "Common/image-box-widget";
+@import "Common/image-carousel-widget";
 @import "Common/item-list-widget";
 @import "Common/title-bar-widget";
