--- a/resources/css/ceres.css
+++ b/resources/css/ceres.css
@@ -19751,6 +19751,50 @@ body.menu-is-visible {
   }
 }
 
+.widget-proportional {
+  position: relative;
+  padding-bottom: 33.33333%;
+  overflow: hidden;
+}
+
+.widget-proportional .widget-inner {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+
+@media (min-width: 768px) {
+  .widget-grid-1-2 > .widget-inner:first-child .widget-proportional,
+  .widget-grid-2-1 > .widget-inner:last-child .widget-proportional,
+  .widget-grid-2-1-1 > .widget-inner .widget-proportional,
+  .widget-grid-1-2-1 > .widget-inner .widget-proportional,
+  .widget-grid-1-1-2 > .widget-inner .widget-proportional {
+    padding-bottom: 100%;
+  }
+  .widget-grid-1-1-1 > .widget-inner .widget-proportional {
+    padding-bottom: 66.6666%;
+  }
+  .widget-grid-1-2 > .widget-inner:last-child .widget-proportional,
+  .widget-grid-2-1 > .widget-inner:first-child .widget-proportional,
+  .widget-grid-2-1-1 > .widget-inner:first-child .widget-proportional,
+  .widget-grid-1-2-1 > .widget-inner:nth-child(2) .widget-proportional,
+  .widget-grid-1-1-2 > .widget-inner:last-child .widget-proportional {
+    padding-bottom: 50%;
+  }
+  .widget-grid-stacked .widget-inner .widget-proportional {
+    padding-bottom: 66%;
+  }
+  .widget-grid-stacked .widget-inner-stacked .widget-proportional {
+    padding-bottom: 0;
+    height: 100%;
+  }
+  .widget-grid-stacked .widget-inner-stacked .widget-proportional > .widget-inner .widget-caption h2, .widget-grid-stacked .widget-inner-stacked .widget-proportional > .widget-inner .widget-caption .h2 {
+    font-size: 1.75rem;
+  }
+}
+
 .widget-grid {
   margin-left: -15px;
   margin-right: -15px;
@@ -19779,8 +19823,10 @@ body.menu-is-visible {
       flex-direction: column;
 }
 
-.widget-grid .widget-inner-stacked > .widget-inner:first-child {
-  padding-bottom: 2rem;
+@media (min-width: 768px) {
+  .widget-grid .widget-inner-stacked > .widget-inner:first-child {
+    padding-bottom: 2rem;
+  }
 }
 
 .widget-grid.widget-grid-1-2 .widget-inner:last-child,
@@ -19791,12 +19837,6 @@ body.menu-is-visible {
 .widget-grid.widget-grid-stacked .widget-inner:not(.widget-inner-stacked) {
   -ms-flex: 2;
       flex: 2;
-}
-
-.widget-image-box {
-  position: relative;
-  padding-bottom: 33%;
-  overflow: hidden;
 }
 
 .widget-image-box > img {
@@ -19815,11 +19855,6 @@ body.menu-is-visible {
 }
 
 .widget-image-box > .widget-inner {
-  position: absolute;
-  left: 0;
-  top: 0;
-  right: 0;
-  bottom: 0;
   padding: 1.5rem;
   display: -ms-flexbox;
   display: flex;
@@ -19879,7 +19914,7 @@ body.menu-is-visible {
   background-color: rgba(0, 142, 189, 0.8);
 }
 
-.widget-image-box.widget-primary a.widget-inner:hover .widget-caption {
+.widget-image-box.widget-primary a[href].widget-inner:hover .widget-caption {
   color: #fff;
   background-color: rgba(0, 142, 189, 0.9);
 }
@@ -19889,7 +19924,7 @@ body.menu-is-visible {
   background-color: rgba(212, 2, 29, 0.8);
 }
 
-.widget-image-box.widget-secondary a.widget-inner:hover .widget-caption {
+.widget-image-box.widget-secondary a[href].widget-inner:hover .widget-caption {
   color: #fff;
   background-color: rgba(212, 2, 29, 0.9);
 }
@@ -19899,7 +19934,7 @@ body.menu-is-visible {
   background-color: rgba(91, 192, 222, 0.8);
 }
 
-.widget-image-box.widget-info a.widget-inner:hover .widget-caption {
+.widget-image-box.widget-info a[href].widget-inner:hover .widget-caption {
   color: #fff;
   background-color: rgba(91, 192, 222, 0.9);
 }
@@ -19909,7 +19944,7 @@ body.menu-is-visible {
   background-color: rgba(240, 173, 78, 0.8);
 }
 
-.widget-image-box.widget-warning a.widget-inner:hover .widget-caption {
+.widget-image-box.widget-warning a[href].widget-inner:hover .widget-caption {
   color: #fff;
   background-color: rgba(240, 173, 78, 0.9);
 }
@@ -19919,7 +19954,7 @@ body.menu-is-visible {
   background-color: rgba(217, 83, 79, 0.8);
 }
 
-.widget-image-box.widget-danger a.widget-inner:hover .widget-caption {
+.widget-image-box.widget-danger a[href].widget-inner:hover .widget-caption {
   color: #fff;
   background-color: rgba(217, 83, 79, 0.9);
 }
@@ -19929,36 +19964,249 @@ body.menu-is-visible {
   background-color: rgba(77, 79, 77, 0.8);
 }
 
-.widget-image-box.widget-inverse a.widget-inner:hover .widget-caption {
+.widget-image-box.widget-inverse a[href].widget-inner:hover .widget-caption {
   color: #fff;
   background-color: rgba(77, 79, 77, 0.9);
 }
 
+.widget-image-carousel .widget-inner {
+  padding-left: 0;
+  padding-right: 0;
+}
+
+.widget-image-carousel .widget-inner .widget-caption {
+  position: absolute;
+  text-align: center;
+  bottom: 60px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 80%;
+}
+
+.widget-image-carousel .widget-inner .widget-caption h2, .widget-image-carousel .widget-inner .widget-caption .h2 {
+  padding: .5rem 1rem;
+  font-size: 1.75rem;
+  margin: 0;
+  display: inline-block;
+}
+
 @media (min-width: 768px) {
-  .widget-grid-1-2 > .widget-inner:first-child .widget-image-box,
-  .widget-grid-2-1 > .widget-inner:last-child .widget-image-box,
-  .widget-grid-2-1-1 > .widget-inner .widget-image-box,
-  .widget-grid-1-2-1 > .widget-inner .widget-image-box,
-  .widget-grid-1-1-2 > .widget-inner .widget-image-box {
-    padding-bottom: 100%;
+  .widget-image-carousel .widget-inner .widget-caption h2, .widget-image-carousel .widget-inner .widget-caption .h2 {
+    font-size: 3rem;
   }
-  .widget-grid-1-1-1 > .widget-inner .widget-image-box {
-    padding-bottom: 66.6666%;
+}
+
+.widget-image-carousel .widget-inner .carousel-inner {
+  display: -ms-flexbox;
+  display: flex;
+  height: 100%;
+}
+
+.widget-image-carousel .widget-inner .carousel-item {
+  width: 100%;
+  height: 100%;
+}
+
+.widget-image-carousel .widget-inner .carousel-item img {
+  position: absolute;
+  max-width: 100%;
+  max-height: 100%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.widget-image-carousel .widget-inner .carousel-item img.img-cover {
+  min-width: 100%;
+  min-height: 100%;
+  object-fit: cover;
+}
+
+.widget-image-carousel .widget-inner .carousel-indicators {
+  bottom: 0;
+  padding: .5rem 1rem;
+}
+
+.widget-image-carousel .widget-inner .carousel-indicators li {
+  width: 10px;
+  height: 10px;
+  margin: 1px;
+}
+
+.widget-image-carousel .widget-inner .carousel-control {
+  background-image: none;
+}
+
+.widget-image-carousel .widget-inner .carousel-control .fa {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 3rem;
+}
+
+@media (min-width: 768px) {
+  .widget-inner-stacked .widget-image-carousel .widget-caption h2, .widget-inner-stacked .widget-image-carousel .widget-caption .h2 {
+    padding: .5rem 1rem;
+    font-size: 1.75rem;
+    margin: 0;
   }
-  .widget-grid-1-2 > .widget-inner:last-child .widget-image-box,
-  .widget-grid-2-1 > .widget-inner:first-child .widget-image-box,
-  .widget-grid-2-1-1 > .widget-inner:first-child .widget-image-box,
-  .widget-grid-1-2-1 > .widget-inner:nth-child(2) .widget-image-box,
-  .widget-grid-1-1-2 > .widget-inner:last-child .widget-image-box {
-    padding-bottom: 50%;
+}
+
+@media (min-width: 768px) and (min-width: 768px) {
+  .widget-inner-stacked .widget-image-carousel .widget-caption h2, .widget-inner-stacked .widget-image-carousel .widget-caption .h2 {
+    font-size: 3rem;
   }
-  .widget-grid-stacked .widget-inner .widget-image-box {
-    padding-bottom: 66%;
+}
+
+@media (min-width: 768px) {
+  .widget-inner-stacked .widget-image-carousel .carousel-control .fa {
+    font-size: 1.5rem;
   }
-  .widget-grid-stacked .widget-inner-stacked .widget-image-box {
-    padding-bottom: 0;
-    height: 100%;
-  }
+}
+
+.widget-image-carousel.widget-primary .widget-caption h2,
+.widget-image-carousel.widget-primary .widget-caption .h2 {
+  color: #fff;
+  background-color: rgba(0, 142, 189, 0.8);
+}
+
+.widget-image-carousel.widget-primary:hover .widget-caption h2,
+.widget-image-carousel.widget-primary:hover .widget-caption .h2 {
+  color: #fff;
+  background-color: rgba(0, 142, 189, 0.9);
+}
+
+.widget-image-carousel.widget-primary .carousel-indicators li {
+  border-color: #008ebd;
+}
+
+.widget-image-carousel.widget-primary .carousel-indicators li.active {
+  background-color: #008ebd;
+}
+
+.widget-image-carousel.widget-primary .carousel-control .fa {
+  color: #008ebd;
+}
+
+.widget-image-carousel.widget-secondary .widget-caption h2,
+.widget-image-carousel.widget-secondary .widget-caption .h2 {
+  color: #fff;
+  background-color: rgba(212, 2, 29, 0.8);
+}
+
+.widget-image-carousel.widget-secondary:hover .widget-caption h2,
+.widget-image-carousel.widget-secondary:hover .widget-caption .h2 {
+  color: #fff;
+  background-color: rgba(212, 2, 29, 0.9);
+}
+
+.widget-image-carousel.widget-secondary .carousel-indicators li {
+  border-color: #d4021d;
+}
+
+.widget-image-carousel.widget-secondary .carousel-indicators li.active {
+  background-color: #d4021d;
+}
+
+.widget-image-carousel.widget-secondary .carousel-control .fa {
+  color: #d4021d;
+}
+
+.widget-image-carousel.widget-info .widget-caption h2,
+.widget-image-carousel.widget-info .widget-caption .h2 {
+  color: #fff;
+  background-color: rgba(91, 192, 222, 0.8);
+}
+
+.widget-image-carousel.widget-info:hover .widget-caption h2,
+.widget-image-carousel.widget-info:hover .widget-caption .h2 {
+  color: #fff;
+  background-color: rgba(91, 192, 222, 0.9);
+}
+
+.widget-image-carousel.widget-info .carousel-indicators li {
+  border-color: #5bc0de;
+}
+
+.widget-image-carousel.widget-info .carousel-indicators li.active {
+  background-color: #5bc0de;
+}
+
+.widget-image-carousel.widget-info .carousel-control .fa {
+  color: #5bc0de;
+}
+
+.widget-image-carousel.widget-warning .widget-caption h2,
+.widget-image-carousel.widget-warning .widget-caption .h2 {
+  color: #fff;
+  background-color: rgba(240, 173, 78, 0.8);
+}
+
+.widget-image-carousel.widget-warning:hover .widget-caption h2,
+.widget-image-carousel.widget-warning:hover .widget-caption .h2 {
+  color: #fff;
+  background-color: rgba(240, 173, 78, 0.9);
+}
+
+.widget-image-carousel.widget-warning .carousel-indicators li {
+  border-color: #f0ad4e;
+}
+
+.widget-image-carousel.widget-warning .carousel-indicators li.active {
+  background-color: #f0ad4e;
+}
+
+.widget-image-carousel.widget-warning .carousel-control .fa {
+  color: #f0ad4e;
+}
+
+.widget-image-carousel.widget-danger .widget-caption h2,
+.widget-image-carousel.widget-danger .widget-caption .h2 {
+  color: #fff;
+  background-color: rgba(217, 83, 79, 0.8);
+}
+
+.widget-image-carousel.widget-danger:hover .widget-caption h2,
+.widget-image-carousel.widget-danger:hover .widget-caption .h2 {
+  color: #fff;
+  background-color: rgba(217, 83, 79, 0.9);
+}
+
+.widget-image-carousel.widget-danger .carousel-indicators li {
+  border-color: #d9534f;
+}
+
+.widget-image-carousel.widget-danger .carousel-indicators li.active {
+  background-color: #d9534f;
+}
+
+.widget-image-carousel.widget-danger .carousel-control .fa {
+  color: #d9534f;
+}
+
+.widget-image-carousel.widget-inverse .widget-caption h2,
+.widget-image-carousel.widget-inverse .widget-caption .h2 {
+  color: #fff;
+  background-color: rgba(77, 79, 77, 0.8);
+}
+
+.widget-image-carousel.widget-inverse:hover .widget-caption h2,
+.widget-image-carousel.widget-inverse:hover .widget-caption .h2 {
+  color: #fff;
+  background-color: rgba(77, 79, 77, 0.9);
+}
+
+.widget-image-carousel.widget-inverse .carousel-indicators li {
+  border-color: #4D4F4D;
+}
+
+.widget-image-carousel.widget-inverse .carousel-indicators li.active {
+  background-color: #4D4F4D;
+}
+
+.widget-image-carousel.widget-inverse .carousel-control .fa {
+  color: #4D4F4D;
 }
 
 .widget-item-list .widget-caption {
