--- a/resources/css/ceres.scss
+++ b/resources/css/ceres.scss
@@ -18605,12 +18605,93 @@ nav.navbar.megamenu {
         }
     }
 }
+
+@include media-breakpoint-down(sm)
+{
+    .widget
+    {
+        margin-bottom: 1rem;
+
+        .widget-inner
+        {
+            .widget
+            {
+                margin-bottom: 1rem;
+            }
+        }
+    }
+}
+
+.widget-proportional
+{
+    position: relative;
+    padding-bottom: 33.33333%;
+    overflow: hidden;
+    
+    .widget-inner
+    {
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+    }
+}
+
+@include media-breakpoint-up(md)
+{
+    .widget-grid-1-2 > .widget-inner:first-child .widget-proportional,
+    .widget-grid-2-1 > .widget-inner:last-child .widget-proportional,
+    .widget-grid-2-1-1 > .widget-inner .widget-proportional,
+    .widget-grid-1-2-1 > .widget-inner .widget-proportional,
+    .widget-grid-1-1-2 > .widget-inner .widget-proportional
+    {
+        padding-bottom: 100%;
+    }
+
+    .widget-grid-1-1-1 > .widget-inner .widget-proportional
+    {
+        padding-bottom: 66.6666%;
+    }
+
+    .widget-grid-1-2 > .widget-inner:last-child .widget-proportional,
+    .widget-grid-2-1 > .widget-inner:first-child .widget-proportional,
+    .widget-grid-2-1-1 > .widget-inner:first-child .widget-proportional,
+    .widget-grid-1-2-1 > .widget-inner:nth-child(2) .widget-proportional,
+    .widget-grid-1-1-2 > .widget-inner:last-child .widget-proportional
+    {
+        padding-bottom: 50%;
+    }
+
+    .widget-grid-stacked
+    {
+        .widget-inner .widget-proportional
+        {
+            padding-bottom: 66%;
+        }
+
+        .widget-inner-stacked .widget-proportional
+        {
+            padding-bottom: 0;
+            height: 100%;
+
+            > .widget-inner .widget-caption
+            {
+                h2, .h2
+                {
+                    font-size: 1.75rem;
+                }
+            }
+        }
+    }
+}
+
 .widget-grid
 {
     margin-left: -15px;
     margin-right: -15px;
 
-    @include media-breakpoint-up(sm)
+    @include media-breakpoint-up(md)
     {
         display: -webkit-box;
         display: -ms-flexbox;
@@ -18638,7 +18719,11 @@ nav.navbar.megamenu {
             -ms-flex-direction: column;
                 flex-direction: column;
 
-        > .widget-inner:first-child
+    }
+
+    @include media-breakpoint-up(md)
+    {
+        .widget-inner-stacked > .widget-inner:first-child
         {
             padding-bottom: 2rem;
         }
@@ -18658,13 +18743,11 @@ nav.navbar.megamenu {
 }
 .widget-image-box
 {
-    position: relative;
-    padding-bottom: 33%;
-    overflow: hidden;
-
     > img
     {
         position: absolute;
+        max-width: 100%;
+        max-height: 100%;
         top: 50%;
         left: 50%;
         -webkit-transform: translate(-50%, -50%);
@@ -18674,22 +18757,13 @@ nav.navbar.megamenu {
         {
             min-width: 100%;
             min-height: 100%;
-        }
-
-        &.img-contain
-        {
-            max-width: 100%;
-            max-height: 100%;
+            -o-object-fit: cover;
+               object-fit: cover;
         }
     }
 
     > .widget-inner
     {
-        position: absolute;
-        left: 0;
-        top: 0;
-        right: 0;
-        bottom: 0;
         padding: 1.5rem;
         display: -webkit-box;
         display: -ms-flexbox;
@@ -18703,6 +18777,7 @@ nav.navbar.megamenu {
             h2, .h2
             {
                 margin: 0;
+                font-size: 1.75rem;
             }
         }
     }
@@ -18725,7 +18800,11 @@ nav.navbar.megamenu {
                 {
                     text-align: center;
                     width: 100%;
-                    font-size: 4rem;
+
+                    @include media-breakpoint-up(md)
+                    {
+                        font-size: 4rem;
+                    }
                 }
             }
         }
@@ -18742,7 +18821,6 @@ nav.navbar.megamenu {
             .widget-caption
             {
                 padding: 1.5rem;
-                font-size: 1.75rem;
             }
         }
     }
@@ -18758,11 +18836,6 @@ nav.navbar.megamenu {
                 right: 0;
                 bottom: 0;
                 padding: 1rem;
-
-                h2, .h2
-                {
-                    font-size: 1.5rem;
-                }
             }
         }
     }
@@ -18786,7 +18859,7 @@ nav.navbar.megamenu {
             @include widget-bg-variant( rgba($brand-primary, .8) );
         }
 
-        a.widget-inner:hover .widget-caption
+        a[href].widget-inner:hover .widget-caption
         {
             @include widget-bg-variant( rgba($brand-primary, .9) );
         }
@@ -18799,7 +18872,7 @@ nav.navbar.megamenu {
             @include widget-bg-variant( rgba($brand-secondary, .8) );
         }
 
-        a.widget-inner:hover .widget-caption
+        a[href].widget-inner:hover .widget-caption
         {
             @include widget-bg-variant( rgba($brand-secondary, .9) );
         }
@@ -18812,7 +18885,7 @@ nav.navbar.megamenu {
             @include widget-bg-variant( rgba($brand-info, .8) );
         }
 
-        a.widget-inner:hover .widget-caption
+        a[href].widget-inner:hover .widget-caption
         {
             @include widget-bg-variant( rgba($brand-info, .9) );
         }
@@ -18825,7 +18898,7 @@ nav.navbar.megamenu {
             @include widget-bg-variant( rgba($brand-warning, .8) );
         }
 
-        a.widget-inner:hover .widget-caption
+        a[href].widget-inner:hover .widget-caption
         {
             @include widget-bg-variant( rgba($brand-warning, .9) );
         }
@@ -18838,7 +18911,7 @@ nav.navbar.megamenu {
             @include widget-bg-variant( rgba($brand-danger, .8) );
         }
 
-        a.widget-inner:hover .widget-caption
+        a[href].widget-inner:hover .widget-caption
         {
             @include widget-bg-variant( rgba($brand-danger, .9) );
         }
@@ -18851,50 +18924,173 @@ nav.navbar.megamenu {
             @include widget-bg-variant( rgba($brand-inverse, .8) );
         }
 
-        a.widget-inner:hover .widget-caption
+        a[href].widget-inner:hover .widget-caption
         {
             @include widget-bg-variant( rgba($brand-inverse, .9) );
         }
     }
 
 }
-
-.widget-grid-1-2 > .widget-inner:first-child .widget-image-box,
-.widget-grid-2-1 > .widget-inner:last-child .widget-image-box,
-.widget-grid-2-1-1 > .widget-inner .widget-image-box,
-.widget-grid-1-2-1 > .widget-inner .widget-image-box,
-.widget-grid-1-1-2 > .widget-inner .widget-image-box
+@mixin widget-carousel-variant($parent, $color)
 {
-    padding-bottom: 100%;
-}
-
-.widget-grid-1-1-1 > .widget-inner .widget-image-box
-{
-    padding-bottom: 66.6666%;
-}
-
-.widget-grid-1-2 > .widget-inner:last-child .widget-image-box,
-.widget-grid-2-1 > .widget-inner:first-child .widget-image-box,
-.widget-grid-2-1-1 > .widget-inner:first-child .widget-image-box,
-.widget-grid-1-2-1 > .widget-inner:nth-child(2) .widget-image-box,
-.widget-grid-1-1-2 > .widget-inner:last-child .widget-image-box
-{
-    padding-bottom: 50%;
-}
-
-.widget-grid-stacked
-{
-    .widget-inner .widget-image-box
+    .widget-image-carousel#{$parent}
     {
-        padding-bottom: 66%;
-    }
+        .widget-caption h2,
+        .widget-caption .h2
+        {
+            @include widget-bg-variant( rgba($color, .8) );
+        }
 
-    .widget-inner-stacked .widget-image-box
-    {
-        padding-bottom: 0;
-        height: 100%;
+        &:hover .widget-caption h2,
+        &:hover .widget-caption .h2
+        {
+            @include widget-bg-variant( rgba($color, .9) );
+        }
+
+        .carousel-indicators li
+        {
+            border-color: $color;
+
+            &.active
+            {
+                background-color: $color;
+            }
+        }
+
+        .carousel-control .fa
+        {
+            color: $color;
+        }
     }
 }
+
+.widget-image-carousel
+{
+    .widget-inner
+    {
+        padding-left: 0;
+        padding-right: 0;
+
+        .widget-caption
+        {
+            position: absolute;
+            text-align: center;
+            bottom: 60px;
+            left: 50%;
+            -webkit-transform: translateX(-50%);
+                    transform: translateX(-50%);
+            width: 80%;
+
+            h2, .h2
+            {
+                padding: .5rem 1rem;
+                font-size: 1.75rem;
+                margin: 0;
+                display: inline-block;
+
+                @include media-breakpoint-up(md)
+                {
+                    font-size: 3rem;
+                }
+            }
+        }
+
+        .carousel-inner
+        {
+            display: -webkit-box;
+            display: -ms-flexbox;
+            display: flex;
+            height: 100%;
+        }
+        .carousel-item
+        {
+            width: 100%;
+            height: 100%;
+
+            img
+            {
+                position: absolute;
+                max-width: 100%;
+                max-height: 100%;
+                top: 50%;
+                left: 50%;
+                -webkit-transform: translate(-50%, -50%);
+                        transform: translate(-50%, -50%);
+
+                &.img-cover
+                {
+                    min-width: 100%;
+                    min-height: 100%;
+                    -o-object-fit: cover;
+                       object-fit: cover;
+                }
+            }
+        }
+
+        .carousel-indicators
+        {
+            bottom: 0;
+            padding: .5rem 1rem;
+
+            li
+            {
+                width: 10px;
+                height: 10px;
+                margin: 1px;
+            }
+        }
+
+        .carousel-control
+        {
+            background-image: none;
+
+            .fa
+            {
+                position: absolute;
+                left: 50%;
+                top: 50%;
+                -webkit-transform: translate(-50%, -50%);
+                        transform: translate(-50%, -50%);
+                font-size: 3rem;
+            }
+        }
+    }
+}
+@include media-breakpoint-up(md)
+{
+    .widget-inner-stacked .widget-image-carousel
+    {
+        .widget-caption
+        {
+            h2, .h2
+            {
+                padding: .5rem 1rem;
+                font-size: 1.75rem;
+                margin: 0;
+
+                @include media-breakpoint-up(md)
+                {
+                    font-size: 3rem;
+                }
+            }
+        }
+
+        .carousel-control
+        {
+            .fa
+            {
+                font-size: 1.5rem;
+            }
+        }
+    }
+}
+
+@include widget-carousel-variant('.widget-primary', $brand-primary);
+@include widget-carousel-variant('.widget-secondary', $brand-secondary);
+@include widget-carousel-variant('.widget-info', $brand-info);
+@include widget-carousel-variant('.widget-warning', $brand-warning);
+@include widget-carousel-variant('.widget-danger', $brand-danger);
+@include widget-carousel-variant('.widget-inverse', $brand-inverse);
 .widget-item-list
 {
     .widget-caption
