--- a/resources/scss/ceres/widgets/Common/_image-box-widget.scss
+++ b/resources/scss/ceres/widgets/Common/_image-box-widget.scss
@@ -1,9 +1,5 @@
 .widget-image-box
 {
-    position: relative;
-    padding-bottom: 33%;
-    overflow: hidden;
-
     > img
     {
         position: absolute;
@@ -23,11 +19,6 @@
 
     > .widget-inner
     {
-        position: absolute;
-        left: 0;
-        top: 0;
-        right: 0;
-        bottom: 0;
         padding: 1.5rem;
         display: flex;
 
@@ -114,7 +105,7 @@
             @include widget-bg-variant( rgba($brand-primary, .8) );
         }
 
-        a.widget-inner:hover .widget-caption
+        a[href].widget-inner:hover .widget-caption
         {
             @include widget-bg-variant( rgba($brand-primary, .9) );
         }
@@ -127,7 +118,7 @@
             @include widget-bg-variant( rgba($brand-secondary, .8) );
         }
 
-        a.widget-inner:hover .widget-caption
+        a[href].widget-inner:hover .widget-caption
         {
             @include widget-bg-variant( rgba($brand-secondary, .9) );
         }
@@ -140,7 +131,7 @@
             @include widget-bg-variant( rgba($brand-info, .8) );
         }
 
-        a.widget-inner:hover .widget-caption
+        a[href].widget-inner:hover .widget-caption
         {
             @include widget-bg-variant( rgba($brand-info, .9) );
         }
@@ -153,7 +144,7 @@
             @include widget-bg-variant( rgba($brand-warning, .8) );
         }
 
-        a.widget-inner:hover .widget-caption
+        a[href].widget-inner:hover .widget-caption
         {
             @include widget-bg-variant( rgba($brand-warning, .9) );
         }
@@ -166,7 +157,7 @@
             @include widget-bg-variant( rgba($brand-danger, .8) );
         }
 
-        a.widget-inner:hover .widget-caption
+        a[href].widget-inner:hover .widget-caption
         {
             @include widget-bg-variant( rgba($brand-danger, .9) );
         }
@@ -179,49 +170,10 @@
             @include widget-bg-variant( rgba($brand-inverse, .8) );
         }
 
-        a.widget-inner:hover .widget-caption
+        a[href].widget-inner:hover .widget-caption
         {
             @include widget-bg-variant( rgba($brand-inverse, .9) );
         }
     }
 
-}
-@include media-breakpoint-up(md)
-{
-    .widget-grid-1-2 > .widget-inner:first-child .widget-image-box,
-    .widget-grid-2-1 > .widget-inner:last-child .widget-image-box,
-    .widget-grid-2-1-1 > .widget-inner .widget-image-box,
-    .widget-grid-1-2-1 > .widget-inner .widget-image-box,
-    .widget-grid-1-1-2 > .widget-inner .widget-image-box
-    {
-        padding-bottom: 100%;
-    }
-
-    .widget-grid-1-1-1 > .widget-inner .widget-image-box
-    {
-        padding-bottom: 66.6666%;
-    }
-
-    .widget-grid-1-2 > .widget-inner:last-child .widget-image-box,
-    .widget-grid-2-1 > .widget-inner:first-child .widget-image-box,
-    .widget-grid-2-1-1 > .widget-inner:first-child .widget-image-box,
-    .widget-grid-1-2-1 > .widget-inner:nth-child(2) .widget-image-box,
-    .widget-grid-1-1-2 > .widget-inner:last-child .widget-image-box
-    {
-        padding-bottom: 50%;
-    }
-
-    .widget-grid-stacked
-    {
-        .widget-inner .widget-image-box
-        {
-            padding-bottom: 66%;
-        }
-
-        .widget-inner-stacked .widget-image-box
-        {
-            padding-bottom: 0;
-            height: 100%;
-        }
-    }
 }
