--- a/resources/scss/ceres/widgets/Grid/_grid-widget.scss
+++ b/resources/scss/ceres/widgets/Grid/_grid-widget.scss
@@ -22,7 +22,11 @@
         display: flex;
         flex-direction: column;
 
-        > .widget-inner:first-child
+    }
+
+    @include media-breakpoint-up(md)
+    {
+        .widget-inner-stacked > .widget-inner:first-child
         {
             padding-bottom: 2rem;
         }
