--- a/resources/views/Widgets/Common/ImageBoxWidget.twig
+++ b/resources/views/Widgets/Common/ImageBoxWidget.twig
@@ -39,29 +39,19 @@
     {{ Twig.set("imageUrl", "data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22800%22%20height%3D%22400%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20800%20400%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_161c3653395%20text%20%7B%20fill%3A%23555%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A40pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_161c3653395%22%3E%3Crect%20width%3D%22800%22%20height%3D%22400%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%22285.921875%22%20y%3D%22218.45%22%3E%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" | json_encode) }}
 {{ Twig.endif() }}
 
-<div class="widget widget-image-box widget-image-box-{{ style }} widget-primary">
+<div class="widget widget-image-box widget-image-box-{{ style }} widget-primary widget-proportional">
     {{ Twig.if("imageUrl | trim is not empty") }}
         <img class="img-{{ imageSize }}" src="{{ Twig.print("imageUrl") }}" />
     {{ Twig.endif() }}
-    <div class="widget-inner">
-        {{ Twig.if("url | trim is not empty") }}
-            <a href="{{ Twig.print("url") }}" class="widget-caption">
-                {{ Twig.if("name | trim is not empty") }}
-                <h2>
-                    <i class="fa fa-angle-double-right" aria-hidden="true"></i>
-                    {{ Twig.print("name") }}
-                </h2>
-                {{ Twig.endif() }}
-            </a>
-        {{ Twig.else() }}
-            <div class="widget-caption">
-                {{ Twig.if("name | trim is not empty") }}
-                <h2>
-                    <i class="fa fa-angle-double-right" aria-hidden="true"></i>
-                    {{ Twig.print("name") }}
-                </h2>
-                {{ Twig.endif() }}
-            </div>
-        {{ Twig.endif() }}
-    </div>
+
+    <a{{ Twig.if("url | trim is not empty") }} href="{{ Twig.print("url") }}"{{ Twig.endif() }} class="widget-inner">
+        <div class="widget-caption">
+            {{ Twig.if("name | trim is not empty") }}
+            <h2>
+                <i class="fa fa-angle-double-right" aria-hidden="true"></i>
+                {{ Twig.print("name") }}
+            </h2>
+            {{ Twig.endif() }}
+        </div>
+    </a>
 </div>
