--- a/resources/scss/ceres/widgets/Common/_image-carousel-widget.scss
+++ b/resources/scss/ceres/widgets/Common/_image-carousel-widget.scss
@@ -148,6 +148,7 @@
 
 @include widget-carousel-variant('.widget-primary', $brand-primary);
 @include widget-carousel-variant('.widget-secondary', $brand-secondary);
+@include widget-carousel-variant('.widget-success', $brand-success);
 @include widget-carousel-variant('.widget-info', $brand-info);
 @include widget-carousel-variant('.widget-warning', $brand-warning);
 @include widget-carousel-variant('.widget-danger', $brand-danger);
