--- a/resources/scss/ceres/widgets/Common/_image-box-widget.scss
+++ b/resources/scss/ceres/widgets/Common/_image-box-widget.scss
@@ -124,6 +124,19 @@
         }
     }
 
+    &.widget-success
+    {
+        .widget-caption
+        {
+            @include widget-bg-variant( rgba($brand-success, .8) );
+        }
+
+        a[href].widget-inner:hover .widget-caption
+        {
+            @include widget-bg-variant( rgba($brand-success, .9) );
+        }
+    }
+
     &.widget-info
     {
         .widget-caption
