--- a/resources/scss/ceres/widgets/Common/_title-bar-widget.scss
+++ b/resources/scss/ceres/widgets/Common/_title-bar-widget.scss
@@ -24,6 +24,11 @@
         @include widget-bg-variant($brand-secondary);
     }
 
+    &.widget-success
+    {
+        @include widget-bg-variant($brand-success);
+    }
+
     &.widget-info
     {
         @include widget-bg-variant($brand-info);
