--- a/resources/views/Widgets/Common/TitleBarWidget.twig
+++ b/resources/views/Widgets/Common/TitleBarWidget.twig
@@ -2,7 +2,7 @@
 
 {% set text = widget.settings.text.mobile %}
 
-<div class="widget widget-title-bar widget-primary">
+<div class="widget widget-title-bar widget-{{ widget.settings.appearance.mobile | default('primary') }}">
     <div class="widget-inner">
         {% if text | trim is not empty %}
             <h1>{{ text }}</h1>
