--- a/resources/scss/ceres/widgets/Common/_image-box-widget.scss
+++ b/resources/scss/ceres/widgets/Common/_image-box-widget.scss
@@ -48,6 +48,7 @@
                 {
                     text-align: center;
                     width: 100%;
+                    text-transform: uppercase;
 
                     @include media-breakpoint-up(md)
                     {
