ADD bundled sass

--- a/resources/css/ceres.scss
+++ b/resources/css/ceres.scss
@@ -18800,6 +18800,7 @@ nav.navbar.megamenu {
                 {
                     text-align: center;
                     width: 100%;
+                    text-transform: uppercase;
 
                     @include media-breakpoint-up(md)
                     {
